--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html, body {
   min-height: 100%;
 }
 body{
-	color: #523a3a;
+	color: #FFFFFF;
 	font-family: Tahoma;
 	font-size: 14pt;
 	line-height: 18pt;
@@ -25,6 +25,20 @@ a.link-white, a.link-white:hover, a.link-white:active, a.link-white:focus {
 }
 a > i {
     margin: 0 7px;
+}
+.overlay-opacity {
+    filter: alpha(opacity=50);
+    opacity: 0.3;
+}
+.section-overlay {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    min-height: 700px;
+    width: 100%;
+}
+.bg-black {
+    background-color: #000;
 }
 
 #coming-soon{
